Fixed overlap on adjacent number flippers

--- a/css/number-flipper.css
+++ b/css/number-flipper.css
@@ -3,48 +3,51 @@
   position: relative;
 }
 .flipper {
-  position: absolute;
+  position: relative;
+  width: 60px;
+  height: 100px;
+  float: left;
+  margin-left: 5px;
 }
 
 .tile {
   list-style: none;
-  padding: 3px 5px;
-  width: 60px;
-  height: 100px;
   text-align:center;
   color:#fff;
+  width: 100%;
+  height: 100%;
   font-size: 100px;
   line-height: 100px;
-  perspective: 30px;
+  perspective: 500px;
   position: absolute;
   z-index: 0;
-  -webkit-perspective: 300px;
+  -webkit-perspective: 500px;
 }
 
 .mask {
-  height: 50px;
-  width: 60px;
+  height: 50%;
+  width: 100%;
   position: absolute;
-  overflow: hidden;
 }
 .mask.below {
-  -webkit-transform: translateY(52px);
+  -webkit-transform: translateY(100%);
+  overflow: hidden;
 }
 .mask.below .mask-inner {
- -webkit-transform: translateY(-52px);
+  overflow: visible;
+  -webkit-transform: translateY(-100%);
 }
 
 .tile-inner {
+  overflow: hidden;
   border-radius: 5px;
+  height: 100%;
   background: #df300d; /* Old browsers */
-   background: -moz-linear-gradient(top,  #df300d 0%, #df300d 49%, #ffffff 49%, #ffffff 49%, #ffffff 51%, #b42801 51%, #b42801 100%); /* FF3.6+ */
-   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#df300d), color-stop(49%,#df300d), color-stop(49%,#ffffff), color-stop(49%,#ffffff), color-stop(51%,#ffffff), color-stop(51%,#b42801), color-stop(100%,#b42801)); /* Chrome,Safari4+ */
-   background: -webkit-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* Chrome10+,Safari5.1+ */
-   background: -o-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* Opera 11.10+ */
-   background: -ms-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* IE10+ */
-   background: linear-gradient(to bottom,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* W3C */
-   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#df300d', endColorstr='#b42801',GradientType=0 ); /* IE6-9 */
-}
-.tile-inner.mask-inner {
-  box-shadow: none;
+  background: -moz-linear-gradient(top,  #df300d 0%, #df300d 49%, #ffffff 49%, #ffffff 49%, #ffffff 51%, #b42801 51%, #b42801 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#df300d), color-stop(49%,#df300d), color-stop(49%,#ffffff), color-stop(49%,#ffffff), color-stop(51%,#ffffff), color-stop(51%,#b42801), color-stop(100%,#b42801)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #df300d 0%,#df300d 49%,#ffffff 49%,#ffffff 49%,#ffffff 51%,#b42801 51%,#b42801 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#df300d', endColorstr='#b42801',GradientType=0 ); /* IE6-9 */
 }
